--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ h2 {
 </center>
 <table class="table">
     <tr>
-        <td><span><a href="">Valfride Nascimento</a></span></td>
-        <td><span><a href="">Rayson Laroca</a></span></td>
-        <td><span><a href="">Gabriel Lima</a></span></td>
-        <td><span><a href="">David Menotti</a></span></td>
+        <td><span><a href="https://www.inf.ufpr.br/vwnascimento/">Valfride Nascimento</a></span></td>
+        <td><span><a href="https://www.ppgia.pucpr.br/~rayson/">Rayson Laroca</a></span></td>
+        <td><span><a href="https://www.inf.ufpr.br/gelima/">Gabriel Lima</a></span></td>
+        <td><span><a href="https://web.inf.ufpr.br/menotti/">David Menotti</a></span></td>
     </tr>
 </table>
 
