--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ h2 {
 </center>
 <table class="table">
     <tr>
-        <td><span><a href="https://www.inf.ufpr.br/vwnascimento/">Valfride Nascimento</a></span></td>
-        <td><span><a href="https://www.ppgia.pucpr.br/~rayson/">Rayson Laroca</a></span></td>
-        <td><span><a href="https://www.inf.ufpr.br/gelima/">Gabriel Lima</a></span></td>
-        <td><span><a href="https://web.inf.ufpr.br/menotti/">David Menotti</a></span></td>
+        <td><span><a href="https://www.inf.ufpr.br/vwnascimento/" target="_blank">Valfride Nascimento</a></span></td>
+        <td><span><a href="https://www.ppgia.pucpr.br/~rayson/" target="_blank">Rayson Laroca</a></span></td>
+        <td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel Lima</a></span></td>
+        <td><span><a href="https://web.inf.ufpr.br/menotti/" target="_blank">David Menotti</a></span></td>
     </tr>
 </table>
 
@@ -133,9 +133,9 @@ h2 {
     </ul>
     <table class="table">
     <tr>
-        <td><span><a href="">[arXiv]</a></span></td>
-        <td><span><a href="">[BibTeX]</a></span></td>
-        <td><span><a href="">[train/val/test splits]</a></span></td>
+        <td><span><a href="" target="_blank">[arXiv]</a></span></td>
+        <td><span><a href="" target="_blank">[BibTeX]</a></span></td>
+        <td><span><a href="" target="_blank">[train/val/test splits]</a></span></td>
     </tr>
 </table>
 </div>
