--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             margin: 20px auto; /* Center the line */
             max-width: 80% /* Adjust width of the line */
         }
+	    
+	sup {
+            font-size: 10px;
+        }
 	
 h2 {
     border-top: 1px solid #000;
@@ -88,10 +92,10 @@ h2 {
 </center>
 <table class="table">
     <tr>
-        <td><span><a href="https://www.inf.ufpr.br/vwnascimento/" target="_blank">Valfride Nascimento</a></span></td>
-        <td><span><a href="https://www.ppgia.pucpr.br/~rayson/" target="_blank">Rayson Laroca</a></span></td>
-        <td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel Lima</a></span></td>
-        <td><span><a href="https://web.inf.ufpr.br/menotti/" target="_blank">David Menotti</a></span></td>
+        <td><span><a href="https://www.inf.ufpr.br/vwnascimento/" target="_blank">Valfride Nascimento</a><sup>1</sup></span></td>
+        <td><span><a href="https://www.ppgia.pucpr.br/~rayson/" target="_blank">Rayson Laroca</a><sup>2</sup></span></td>
+        <td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel Lima</a><sup>1</sup></span></td>
+        <td><span><a href="https://web.inf.ufpr.br/menotti/" target="_blank">David Menotti</a><sup>1</sup></span></td>
     </tr>
 </table>
 
