--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ h2 {
 <table class="table">
     <tr>
         <td><span><a href="https://www.inf.ufpr.br/vwnascimento/" target="_blank">Valfride Nascimento</a><sup>1</sup></span></td>
-        <td><span><a href="https://www.ppgia.pucpr.br/~rayson/" target="_blank">Rayson Laroca</a><sup>2</sup></span></td>
+        <td><span><a href="https://www.ppgia.pucpr.br/~rayson/" target="_blank">Rayson Laroca</a><sup>1,2</sup></span></td>
         <td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel Lima</a><sup>1</sup></span></td>
         <td><span><a href="https://web.inf.ufpr.br/menotti/" target="_blank">David Menotti</a><sup>1</sup></span></td>
     </tr>
@@ -102,7 +102,10 @@ h2 {
 <!-- Single line for the Federal University -->
 <table class="table">
     <tr>
-        <td colspan="4"><span style="display: inline-block; width: 100%;">Federal University of Paraná</span></td>
+        <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>1</sup>Federal University of Paraná</span></td>
+    </tr>
+    <tr>
+        <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>1,2</sup>Pontifical Catholic University of Paraná</span></td>
     </tr>
 </table>
 
