--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ h2 {
         <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>1</sup>Federal University of Paraná</span></td>
     </tr>
     <tr>
-        <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>1,2</sup>Pontifical Catholic University of Paraná</span></td>
+        <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>2</sup>Pontifical Catholic University of Paraná</span></td>
     </tr>
 </table>
 
@@ -144,6 +144,13 @@ h2 {
         <td><span><a href="" target="_blank">[BibTeX]</a></span></td>
         <td><span><a href="" target="_blank">[train/val/test splits]</a></span></td>
     </tr>
+</table>
+</div>
+
+<h2><center>How to Access the Dataset</center></h2>
+<div class="paper">
+    <p>The Cars-SRPlates dataset is available for academic research purposes and is free to researchers affiliated with educational or research institutions for non-commercial use. To request access, carefully review and complete the license agreement, then send it to the first author at <a href="mailto:vwnascimento@inf.ufpr.br" style="text-decoration: none; color: #0073e6;" target="_blank">vwnascimento@inf.ufpr.br</a>
+. Please ensure the email is sent from a valid university domain (e.g., .edu, .ac, or similar). A download link will typically be provided within 1-5 business days. Incomplete requests or failure to follow the instructions may result in no response.</p>
 </table>
 </div>
 
