--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -145,9 +145,9 @@
     </ul>
     <table class="table">
     <tr>
-        <td><span><a href="" target="_blank">[arXiv]</a></span></td>
-        <td><span><a href="" target="_blank">[BibTeX]</a></span></td>
-        <td><span><a href="" target="_blank">[train/val/test splits]</a></span></td>
+        <td><span><a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[arXiv]</a></span></td>
+        <td><span><a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[BibTeX]</a></span></td>
+        <td><span><a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[train/val/test splits]</a></span></td>
     </tr>
 </table>
 </div>
