--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -98,7 +98,7 @@
 <table class="table">
     <tr>
         <td><span><a href="https://www.inf.ufpr.br/vwnascimento/" target="_blank">Valfride Nascimento</a><sup>1</sup></span></td>
-        <td><span><a href="https://www.ppgia.pucpr.br/~rayson/" target="_blank">Rayson Laroca</a><sup>1,2</sup></span></td>
+        <td><span><a href="https://raysonlaroca.github.io/" target="_blank">Rayson Laroca</a><sup>1,2</sup></span></td>
         <td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel Lima</a><sup>1</sup></span></td>
         <td><span><a href="https://web.inf.ufpr.br/menotti/" target="_blank">David Menotti</a><sup>1</sup></span></td>
     </tr>
