--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toward Advancing License Plate Super-Resolution <br> in Real-World Scenarios: A Dataset and Benchmark</title>
+    <title>Toward Advancing License Plate Super-Resolution in Real-World Scenarios: A Dataset and Benchmark</title>
     <style>
         .table {
             justify-content: center;
