--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -98,8 +98,10 @@
 <table class="table">
     <tr>
         <td><span><a href="https://www.inf.ufpr.br/vwnascimento/" target="_blank">Valfride Nascimento</a><sup>1</sup></span></td>
-        <td><span><a href="https://raysonlaroca.github.io/" target="_blank">Rayson Laroca</a><sup>1,2</sup></span></td>
-        <td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel Lima</a><sup>1</sup></span></td>
+	<td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel Lima</a><sup>1</sup></span></td>
+	<td><span><a href="" target="_blank">Rafael O. Ribeiro</a><sup>2</sup></span></td>
+	<td><span><a href="http://william.dcc.ufmg.br/">William Robson Schwartz</a><sup>4</sup></span></td>
+        <td><span><a href="https://raysonlaroca.github.io/" target="_blank">Rayson Laroca</a><sup>1,3</sup></span></td>        
         <td><span><a href="https://web.inf.ufpr.br/menotti/" target="_blank">David Menotti</a><sup>1</sup></span></td>
     </tr>
 </table>
@@ -110,7 +112,13 @@
         <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>1</sup>Federal University of Paraná</span></td>
     </tr>
     <tr>
-        <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>2</sup>Pontifical Catholic University of Paraná</span></td>
+        <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>2</sup>Brazilian Federal Police</span></td>
+    </tr>
+    <tr>
+        <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>3</sup>Federal University of Minas Gerais </span></td>
+    </tr>
+    <tr>
+        <td colspan="4"><span style="display: inline-block; width: 100%;"><sup>4</sup>Pontifical Catholic University of Paraná</span></td>
     </tr>
 </table>
 
