--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -98,8 +98,8 @@
 <table class="table">
     <tr>
         <td><span><a href="https://www.inf.ufpr.br/vwnascimento/" target="_blank">Valfride Nascimento</a><sup>1</sup></span></td>
-	<td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel Lima</a><sup>1</sup></span></td>
-	<td><span><a href="" target="_blank">Rafael O. Ribeiro</a><sup>2</sup></span></td>
+	<td><span><a href="https://www.inf.ufpr.br/gelima/" target="_blank">Gabriel E. Lima</a><sup>1</sup></span></td>
+	<td><span><a href="https://research.aston.ac.uk/en/persons/rafael-oliveira-ribeiro" target="_blank">Rafael O. Ribeiro</a><sup>2</sup></span></td>
 	<td><span><a href="http://william.dcc.ufmg.br/">William Robson Schwartz</a><sup>4</sup></span></td>
         <td><span><a href="https://raysonlaroca.github.io/" target="_blank">Rayson Laroca</a><sup>1,3</sup></span></td>        
         <td><span><a href="https://web.inf.ufpr.br/menotti/" target="_blank">David Menotti</a><sup>1</sup></span></td>
@@ -142,7 +142,7 @@
 <!-- Paper Section -->
 <h2><center>Paper</center></h2>
 <div class="paper">
-    <p><strong>Authors:</strong> Valfride Nascimento, Rayson Laroca, Gabriel Lima, David Menotti</p>
+    <p><strong>Authors:</strong> Valfride Nascimento, Gabriel E. Lima, Rafael O. Ribeiro, William Robson Schwartz, Rayson Laroca, David Menotti</p>
     <p><strong>Title:</strong> Toward Advancing License Plate Super-Resolution in Real-World Scenarios: A Dataset and Benchmark</p>
     <!--<p><strong>Conference:</strong> Iberoamerican Congress on Pattern Recognition (CIARP), pp. 60-75, Nov 2023.</p>-->
     <p><strong>Summary:</strong></p>
