--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -125,9 +125,9 @@
 <!-- Figure Section -->
 <figure>
     <img src="carssrplates1.png" alt="Description of the image">
-    <figcaption>Examples of tracks in the UFPR-SR-Plates dataset. Each track consists of five sequential LR images and five sequential HR images of the same license plate, captured under varying real-world conditions. Each row represents a track, with the left side showcasing the LR images, while the right side presents samples of the HR images.
-    </figcaption>
-</figure>
+    <figcaption>
+    Examples of tracks from the UFPR-SR-Plates dataset. Each track comprises five consecutive LR images and five consecutive HR images of the same LP, captured under varying conditions. Each row shows a single track, with the LR images displayed on the left and the corresponding HR images on the right. We remark that even what we consider ‘HR’ in the context of this work is of lower quality than the datasets typically used in LPR research.
+    </figure>
 
 
 
