--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -154,7 +154,7 @@
     <table class="table">
     <tr>
         <td><span><a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[arXiv]</a></span></td>
-        <td><span><a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[BibTeX]</a></span></td>
+        <td><span><a href="https://raysonlaroca.github.io/bibtex/nascimento2025toward.txt" target="_blank">[BibTeX]</a></span></td>
         <td><span><a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[UFPR-SR-Plates]</a></span></td>
     </tr>
 </table>
