--- a/nascimento2024toward/index2.html
+++ b/nascimento2024toward/index2.html
@@ -80,6 +80,7 @@
         margin: 20px 0;
         box-shadow: 0 2px 6px rgba(0,0,0,0.08);
         border: 1px solid #eee;
+        text-align: justify;
     }
 
     .links-container {
