--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -182,7 +182,7 @@
     <div class="links-container">
         <a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[arXiv]</a>
         <a href="https://raysonlaroca.github.io/bibtex/nascimento2025toward.txt" target="_blank">[BibTeX]</a>
-        <a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[UFPR-SR-Plates]</a>
+        <a href="https://github.com/valfride/UFPR-SR-Plates" target="_blank">[UFPR-SR-Plates]</a>
     </div>
 </div>
 
