--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -180,7 +180,7 @@
     </ul>
     
     <div class="links-container">
-        <a href="https://valfride.github.io/nascimento2024toward/under_review.html" target="_blank">[arXiv]</a>
+        <a href="#" target="_blank">[arXiv](soon)</a>
         <a href="https://raysonlaroca.github.io/bibtex/nascimento2025toward.txt" target="_blank">[BibTeX]</a>
         <a href="https://github.com/valfride/UFPR-SR-Plates" target="_blank">[UFPR-SR-Plates]</a>
     </div>
