--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -186,10 +186,10 @@
     </div>
 </div>
 
-<h2>How to Access the Dataset</h2>
+<!-- <h2>How to Access the Dataset</h2>
 <div class="card">
     <p>The UFPR-SR-Plates dataset is available for academic research purposes and is free to researchers affiliated with educational or research institutions for non-commercial use. To request access, carefully review and complete the license agreement, then send it to Professor David Menotti (<a href="mailto:menotti@inf.ufpr.br" target="_blank">menotti@inf.ufpr.br</a>). Please ensure the email is sent from a valid university domain (e.g., .edu, .ac, or similar). A download link will typically be provided within 1-5 business days. Incomplete requests or failure to follow the instructions may result in no response.</p>
-</div>
+</div> -->
 
 <h2>Acknowledgements</h2>
 <div class="card">
