--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -191,7 +191,7 @@
     <p>The UFPR-SR-Plates dataset is available for academic research purposes and is free to researchers affiliated with educational or research institutions for non-commercial use. To request access, carefully review and complete the license agreement, then send it to Professor David Menotti (<a href="mailto:menotti@inf.ufpr.br" target="_blank">menotti@inf.ufpr.br</a>). Please ensure the email is sent from a valid university domain (e.g., .edu, .ac, or similar). A download link will typically be provided within 1-5 business days. Incomplete requests or failure to follow the instructions may result in no response.</p>
 </div> -->
 
-<h2>Acknowledgements</h2>
+<h2>Acknowledgments</h2>
 <div class="card">
     <p>This study was financed in part by the Coordenação de Aperfeiçoamento de Pessoal de Nível Superior - Brasil (CAPES) - Finance Code 001, and in part by the Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq)(# 315409/2023-1 and # 312565/2023-2). We gratefully acknowledge the support of NVIDIA Corporation with the donation of the Quadro RTX 8000 GPU used for this research.</p>
 </div>
