--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -158,7 +158,7 @@
 <figure>
     <img src="carssrplates1.png" alt="Dataset examples">
     <figcaption>
-    Examples of tracks from the UFPR-SR-Plates dataset. Each track comprises five consecutive LR images and five consecutive HR images of the same LP, captured under varying conditions. Each row shows a single track, with the LR images displayed on the left and the corresponding HR images on the right. We remark that even what we consider 'HR' in the context of this work is of lower quality than the datasets typically used in LPR research.
+    Examples of tracks from the <a href="https://github.com/valfride/UFPR-SR-Plates" target="_blank">UFPR-SR-Plates</a> dataset. Each track comprises five consecutive LR images and five consecutive HR images of the same LP, captured under varying conditions. Each row shows a single track, with the LR images displayed on the left and the corresponding HR images on the right. We remark that even what we consider 'HR' in the context of this work is of lower quality than the datasets typically used in LPR research.
     </figcaption>
 </figure>
 
