--- a/nascimento2024toward/index.html
+++ b/nascimento2024toward/index.html
@@ -183,6 +183,7 @@
         <a href="#" target="_blank">[arXiv](soon)</a>
         <a href="https://raysonlaroca.github.io/bibtex/nascimento2025toward.txt" target="_blank">[BibTeX]</a>
         <a href="https://github.com/valfride/UFPR-SR-Plates" target="_blank">[UFPR-SR-Plates]</a>
+        <a href="https://github.com/valfride/lpsrgan" target="_blank">[LPSRGAN]</a>
     </div>
 </div>
 
