--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!--<!DOCTYPE HTML>
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
@@ -8,5 +8,18 @@
     <body>
         If you are not redirected automatically, 
         follow the <a href="https://valfride.github.io/nascimento2024toward/index2.html">link to the documentation</a>
+    </body>
+</html>-->
+
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=https://valfride.github.io/nascimento2025toward/index.html">
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, 
+        follow the <a href="https://valfride.github.io/nascimento2025toward/index.html">link to the documentation</a>
     </body>
 </html>
