--- a/nascimento2025toward/index.html
+++ b/nascimento2025toward/index.html
@@ -188,6 +188,18 @@
     </div>
 </div>
 
+<h3>Related Work</h3>
+<div class="card">
+    <p><strong>[1]</strong> V. Nascimento, R. Laroca, R. O. Ribeiro, W. R. Schwartz, D. Menotti, "Enhancing License Plate Super-Resolution: A Layout-Aware and Character-Driven Approach," in Conference on Graphics, Patterns and Images (SIBGRAPI), pp. 1-6, Sept. 2024.</p>
+    <div class="links-container">
+        <a href="https://arxiv.org/abs/2408.15103" target="_blank">[arXiv]</a>
+    </div>
+    <p><strong>[2]</strong> V. Nascimento, R. Laroca, J. A. Lambert, W. R. Schwartz, D. Menotti, “Super-Resolution of License Plate Images Using Attention Modules and Sub-Pixel Convolution Layers,” in Computers & Graphics, vol. 113, pp. 69-76, 2023.</p>
+    <div class="links-container">
+        <a href="https://arxiv.org/abs/2305.17313" target="_blank">[arXiv]</a>
+    </div>
+</div>
+
 <!-- <h2>How to Access the Dataset</h2>
 <div class="card">
     <p>The UFPR-SR-Plates dataset is available for academic research purposes and is free to researchers affiliated with educational or research institutions for non-commercial use. To request access, carefully review and complete the license agreement, then send it to Professor David Menotti (<a href="mailto:menotti@inf.ufpr.br" target="_blank">menotti@inf.ufpr.br</a>). Please ensure the email is sent from a valid university domain (e.g., .edu, .ac, or similar). A download link will typically be provided within 1-5 business days. Incomplete requests or failure to follow the instructions may result in no response.</p>
