--- a/nascimento2025toward/index.html
+++ b/nascimento2025toward/index.html
@@ -190,14 +190,14 @@
 
 <h3>Related Work</h3>
 <div class="card">
-    <p><strong>[1]</strong> V. Nascimento, R. Laroca, R. O. Ribeiro, W. R. Schwartz, D. Menotti, "Enhancing License Plate Super-Resolution: A Layout-Aware and Character-Driven Approach," in Conference on Graphics, Patterns and Images (SIBGRAPI), pp. 1-6, Sept. 2024.</p>
-    <div class="links-container">
+    <p><strong>[1]</strong> V. Nascimento, R. Laroca, R. O. Ribeiro, W. R. Schwartz, D. Menotti, "Enhancing License Plate Super-Resolution: A Layout-Aware and Character-Driven Approach," in Conference on Graphics, Patterns and Images (SIBGRAPI), pp. 1-6, Sept. 2024.<div class="links-container">
         <a href="https://arxiv.org/abs/2408.15103" target="_blank">[arXiv]</a>
-    </div>
-    <p><strong>[2]</strong> V. Nascimento, R. Laroca, J. A. Lambert, W. R. Schwartz, D. Menotti, “Super-Resolution of License Plate Images Using Attention Modules and Sub-Pixel Convolution Layers,” in Computers & Graphics, vol. 113, pp. 69-76, 2023.</p>
-    <div class="links-container">
+        <a href="https://ieeexplore.ieee.org/document/10716303" target="_blank">[Ieee Xplore]</a>
+    </div></p>
+    <p><strong>[2]</strong> V. Nascimento, R. Laroca, J. A. Lambert, W. R. Schwartz, D. Menotti, “Super-Resolution of License Plate Images Using Attention Modules and Sub-Pixel Convolution Layers,” in Computers & Graphics, vol. 113, pp. 69-76, 2023.<div class="links-container">
         <a href="https://arxiv.org/abs/2305.17313" target="_blank">[arXiv]</a>
-    </div>
+        <a href="https://www.sciencedirect.com/science/article/pii/S0097849323000602" target="_blank">[Science Direct]</a>
+    </div></p>
 </div>
 
 <!-- <h2>How to Access the Dataset</h2>
