--- a/nascimento2025toward/index.html
+++ b/nascimento2025toward/index.html
@@ -192,7 +192,7 @@
 <div class="card">
     <p><strong>[1]</strong> V. Nascimento, R. Laroca, R. O. Ribeiro, W. R. Schwartz, D. Menotti, "Enhancing License Plate Super-Resolution: A Layout-Aware and Character-Driven Approach," in Conference on Graphics, Patterns and Images (SIBGRAPI), pp. 1-6, Sept. 2024.<div class="links-container">
         <a href="https://arxiv.org/abs/2408.15103" target="_blank">[arXiv]</a>
-        <a href="https://ieeexplore.ieee.org/document/10716303" target="_blank">[Ieee Xplore]</a>
+        <a href="https://ieeexplore.ieee.org/document/10716303" target="_blank">[IEEE Xplore]</a>
     </div></p>
     <p><strong>[2]</strong> V. Nascimento, R. Laroca, J. A. Lambert, W. R. Schwartz, D. Menotti, “Super-Resolution of License Plate Images Using Attention Modules and Sub-Pixel Convolution Layers,” in Computers & Graphics, vol. 113, pp. 69-76, 2023.<div class="links-container">
         <a href="https://arxiv.org/abs/2305.17313" target="_blank">[arXiv]</a>
