--- a/nascimento2025toward/index.html
+++ b/nascimento2025toward/index.html
@@ -181,6 +181,7 @@
     </ul>
     
     <div class="links-container">
+        <a href="https://doi.org/10.5753/jbcs.2025.5159" target="_blank">[SBC OpenLib (SOL)]</a>
         <a href="https://arxiv.org/abs/2505.06393" target="_blank">[arXiv]</a>
         <a href="https://raysonlaroca.github.io/bibtex/nascimento2025toward.txt" target="_blank">[BibTeX]</a>
         <a href="https://github.com/valfride/UFPR-SR-Plates" target="_blank">[UFPR-SR-Plates]</a>
